# WhatsUp

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
resources/: manifest.xml
src/: Application.cpp  Application.h  CdmLoader.cpp  CdmLoader.h  Document.cpp  Document.h  Editor.cpp  Editor.h  MainWindow.cpp  MainWindow.h  SplashScreen.cpp  SplashScreen.h  WhatsUp.rc  main.cpp  resource.h
src/autocomplete/: AutoComplete.cpp  AutoComplete.h
src/cdm/: CdmNormalizer.cpp  CdmNormalizer.hpp  CdmRenderer.cpp  CdmRenderer.hpp  document_builder.cpp  document_builder.hpp  document_model.hpp
src/dialogs/: AboutDialog.cpp  AboutDialog.h  DocInfoDialog.cpp  DocInfoDialog.h  InsertDateTimeDialog.cpp  InsertDateTimeDialog.h  InsertHyperlinkDialog.cpp  InsertHyperlinkDialog.h  InsertTableDialog.cpp  InsertTableDialog.h  SettingsDialog.cpp  SettingsDialog.h
src/formats/: DocFormat.cpp  DocFormat.h  DocxFormat.cpp  DocxFormat.h  FormatManager.cpp  FormatManager.h  HtmlFormat.cpp  HtmlFormat.h  HwpFormat.cpp  HwpFormat.h  HwpxFormat.cpp  HwpxFormat.h  IDocumentFormat.h  MdFormat.cpp  MdFormat.h  TxtFormat.cpp  TxtFormat.h  ZipReader.cpp  ZipReader.h
src/i18n/: Localization.cpp  Localization.h
src/spell/: SpellChecker.cpp  SpellChecker.h
